--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=80
 upload.path=${user.home}/upload
+password=flc
 spring.servlet.multipart.max-file-size=4GB
 spring.servlet.multipart.max-request-size=4GB
