--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ upload.path=${user.home}/upload
 password=flc
 spring.servlet.multipart.max-file-size=4GB
 spring.servlet.multipart.max-request-size=4GB
+spring.datasource.url=jdbc:sqlite:ShareText.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
