--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=80
 upload.path=${user.home}/upload/files
 password=flc
+jwt.secret-key=flc
+jwt.expiration-time=2592000
 spring.servlet.multipart.max-file-size=4GB
 spring.servlet.multipart.max-request-size=4GB
 spring.datasource.url=jdbc:sqlite:${user.home}/upload/upload.db
