--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.servlet.multipart.max-file-size=4GB
 spring.servlet.multipart.max-request-size=4GB
 spring.datasource.url=jdbc:sqlite:${user.home}/upload/upload.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
+webdav.username=flc
+webdav.password=flc
