Add SQL initialization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.servlet.multipart.max-file-size=4GB
 spring.servlet.multipart.max-request-size=4GB
 spring.datasource.url=jdbc:sqlite:${user.home}/upload/upload.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.schema=classpath*:database/upload.sql
+spring.datasource.initialization-mode=always
 webdav.username=flc
 webdav.password=flc
 private.directories=/private1,/private2
