--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ server.port=80
 upload.path=${user.home}/upload/files
 password=flc
 jwt.secret-key=flc
-jwt.expiration-time=2592000
-spring.servlet.multipart.max-file-size=4GB
-spring.servlet.multipart.max-request-size=4GB
+jwt.expiration-time=15552000
+spring.servlet.multipart.max-file-size=10GB
+spring.servlet.multipart.max-request-size=10GB
 spring.datasource.url=jdbc:sqlite:${user.home}/upload/upload.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.schema=classpath*:database/upload.sql
 spring.datasource.initialization-mode=always
 webdav.username=flc
 webdav.password=flc
-private.directories=/private1,/private2
+private.directories=/private
