--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,3 +15,5 @@ private.directories=/private
 #cors.allowedOrigins=http://localhost:5173
 cors.allowedOrigins=*
 preview.maxFileSize=10240
+preview.compressImage=true
+download.bufferSize=5120
