Adjust path of zip file

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,7 @@ cors.allowedOrigins=*
 preview.maxFileSize=10240
 preview.compressImage=true
 download.bufferSize=5120
+# ??MyBatis????
+logging.level.org.mybatis.spring.SqlSessionFactoryBean=DEBUG
+# ??SQL??????
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
