--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,23 +1,16 @@
 server.port=80
-upload.path=${user.home}/upload/files
-password=flc
-jwt.secret-key=flc
-jwt.expiration-time=15552000
+spring.application.name=upload
 spring.servlet.multipart.max-file-size=10GB
 spring.servlet.multipart.max-request-size=10GB
 spring.datasource.url=jdbc:sqlite:${user.home}/upload/upload.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.schema=classpath*:database/upload.sql
 spring.datasource.initialization-mode=always
+logging.level.org.mybatis.spring.SqlSessionFactoryBean=DEBUG
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+cors.allowedOrigins=*
+upload.path=${user.home}/upload/files
+jwt.secret-key=flc
+jwt.expiration-time=15552000
 webdav.username=flc
 webdav.password=flc
-private.directories=/private
-#cors.allowedOrigins=http://localhost:5173
-cors.allowedOrigins=*
-preview.maxFileSize=10240
-preview.compressImage=true
-download.bufferSize=5120
-# ??MyBatis????
-logging.level.org.mybatis.spring.SqlSessionFactoryBean=DEBUG
-# ??SQL??????
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
