--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,3 +14,5 @@ jwt.secret-key=flc
 jwt.expiration-time=15552000
 webdav.username=flc
 webdav.password=flc
+logging.file.name=logs/upload.log
+password=flc
