--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@highlightjs/vue-plugin": "^2.1.0",
+    "@popperjs/core": "^2.11.8",
     "@vitejs/plugin-legacy": "^4.0.2",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
