--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
-            <version>1.22</version>
+            <version>1.27</version>
         </dependency>
 
         <dependency>
@@ -122,6 +122,14 @@
             <artifactId>commons-imaging</artifactId>
             <version>1.0-alpha3</version>
         </dependency>
+
+        <dependency>
+            <groupId>org</groupId>
+            <artifactId>jaudiotagger</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
+
 
     </dependencies>
 
