feat Server info UI

--- a/backend/src/main/resources/app-config.properties
+++ b/backend/src/main/resources/app-config.properties
@@ -4,4 +4,4 @@ preview.maxFileSize=10240
 preview.compressImage=true
 download.bufferSize=5120
 bookmark.timeout=6000
-#deactivated.tokens=
+deactivated.tokens=
