--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=80
 spring.application.name=upload
 spring.servlet.multipart.max-file-size=10GB
 spring.servlet.multipart.max-request-size=10GB
-#spring.datasource.url=jdbc:sqlite:${user.home}/upload/upload.db
-spring.datasource.url=jdbc:sqlite:D:/Projects/upload/backend/src/main/resources/database/upload.db
+spring.datasource.url=jdbc:sqlite:${user.home}/upload/upload.db
+#spring.datasource.url=jdbc:sqlite:D:/Projects/upload/backend/src/main/resources/database/upload.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.schema=classpath*:database/upload.sql
 spring.datasource.initialization-mode=always
