--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.schema=classpath*:database/upload.sql
 spring.datasource.initialization-mode=always
 logging.level.org.mybatis.spring.SqlSessionFactoryBean=DEBUG
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 cors.allowedOrigins=*
 upload.path=${user.home}/upload/files
 jwt.secret-key=flc
