feat Generate image direct link

--- a/backend/src/main/resources/app-config.properties
+++ b/backend/src/main/resources/app-config.properties
@@ -1,5 +1,5 @@
 #password=flc
-private.directories=/private
+private.directories=/private,/images
 preview.maxFileSize=10240
 preview.compressImage=true
 download.bufferSize=5120
