--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,6 +11,7 @@ logging.level.org.mybatis.spring.SqlSessionFactoryBean=DEBUG
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 cors.allowedOrigins=*
 upload.path=${user.home}/upload/files
+image.path=${user.home}/upload/files/images/
 jwt.secret-key=flc
 jwt.expiration-time=15552000
 webdav.username=flc
