--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@highlightjs/vue-plugin": "^2.1.0",
     "@popperjs/core": "^2.11.8",
     "@vitejs/plugin-legacy": "^4.0.2",
+    "@zip.js/zip.js": "^2.7.16",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
