feat i18n; reactor Paste

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,3 +18,6 @@ webdav.username=flc
 webdav.password=flc
 logging.file.name=logs/upload.log
 password=flc
+# INTERNATIONALIZATION
+spring.messages.basename=messages
+#spring.messages.encoding=UTF-8
