--- a/backend/src/main/resources/app-config.properties
+++ b/backend/src/main/resources/app-config.properties
@@ -1,7 +1,7 @@
 #password=flc
 private.directories=/private,/images
-preview.maxFileSize=10240
+preview.maxFileSize=10485760
 preview.compressImage=true
-download.bufferSize=5120
+download.bufferSize=8192
 bookmark.timeout=6000
 deactivated.tokens=
