--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap-icons": "^1.10.3",
     "clipboard": "^2.0.11",
     "file-saver": "^2.0.5",
+    "heic2any": "^0.0.4",
     "highlight.js": "^11.7.0",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
