--- a/backend/src/main/resources/app-config.properties
+++ b/backend/src/main/resources/app-config.properties
@@ -1,7 +1,11 @@
-#password=flc
-private.directories=/private,/images
-preview.maxFileSize=10485760
-preview.compressImage=true
-download.bufferSize=8192
-bookmark.timeout=6000
 deactivated.tokens=
+download.buffer-size=8192
+jwt.secret-key=flc
+jwt.expiration-time=15552000
+log.max-size=50
+preview.max-file-size=10485760
+preview.compress-image=true
+private.directories=/private,/images
+request.timeout=6000
+
+
