--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:sqlite:D:/Projects/upload/backend/src/main/resources/
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.schema=classpath*:database/upload.sql
 spring.datasource.initialization-mode=always
-logging.level.org.mybatis.spring.SqlSessionFactoryBean=DEBUG
+#logging.level.org.mybatis.spring.SqlSessionFactoryBean=DEBUG
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 cors.allowedOrigins=*
 upload.path=${user.home}/upload/files
