--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,18 +1,19 @@
+#spring.datasource.url=jdbc:sqlite:D:/Projects/upload/backend/src/main/resources/database/upload.db
+#logging.level.org.mybatis.spring.SqlSessionFactoryBean=DEBUG
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 server.port=80
 spring.application.name=upload
 spring.servlet.multipart.max-file-size=10GB
 spring.servlet.multipart.max-request-size=10GB
-#spring.datasource.url=jdbc:sqlite:${user.home}/upload/upload.db
-spring.datasource.url=jdbc:sqlite:D:/Projects/upload/backend/src/main/resources/database/upload.db
+spring.datasource.url=jdbc:sqlite:${user.home}/upload/upload.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.schema=classpath*:database/upload.sql
 spring.datasource.initialization-mode=always
-#logging.level.org.mybatis.spring.SqlSessionFactoryBean=DEBUG
-#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+logging.file.name=logs/upload.log
+spring.messages.basename=messages
+
 cors.allowedOrigins=*
 upload.path=${user.home}/upload/files
 webdav.username=flc
 webdav.password=flc
-logging.file.name=logs/upload.log
 password=flc
-spring.messages.basename=messages
