--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.4",
     "qs": "^6.11.1",
     "vue": "^3.2.45",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
