--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "qs": "^6.11.1",
+    "v-contextmenu": "^3.0.0",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
