--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,19 +1,53 @@
-#spring.datasource.url=jdbc:sqlite:D:/Projects/upload/backend/src/main/resources/database/upload.db
+# MyBatis????
 #logging.level.org.mybatis.spring.SqlSessionFactoryBean=DEBUG
+
+# MyBatis????
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+# ?????
 server.port=80
+
+# ??????
 spring.application.name=upload
+
+# ????????
 spring.servlet.multipart.max-file-size=10GB
 spring.servlet.multipart.max-request-size=10GB
+
+# ?????URL
 spring.datasource.url=jdbc:sqlite:${user.home}/upload/upload.db
+#spring.datasource.url=jdbc:sqlite:D:/Projects/upload/backend/src/main/resources/database/upload.db
+
+# ???????
 spring.datasource.driver-class-name=org.sqlite.JDBC
+
+# ????????
 spring.datasource.schema=classpath*:database/upload.sql
+
+# ????????
 spring.datasource.initialization-mode=always
+
+# ?????
 logging.file.name=logs/upload.log
+
+# ????????
 spring.messages.basename=messages
 
+# ???????????????
+mybatis-plus.configuration.map-underscore-to-camel-case=false
+
+
+# ?????????
 cors.allowedOrigins=*
+
+# ??????
 upload.path=${user.home}/upload/files
+
+# WebDAV???
 webdav.username=flc
+
+# WebDAV??
 webdav.password=flc
+
+# ??
 password=flc
