--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -87,6 +87,14 @@
             <version>3.5.3.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/net.sf.image4j/image4j -->
+        <dependency>
+            <groupId>org.jclarion</groupId>
+            <artifactId>image4j</artifactId>
+            <version>0.7</version>
+        </dependency>
+
+
         <!-- Spring Boot Starter AOP: 提供AOP（面向切面编程）的支持 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
