--- a/backend/src/main/resources/app-config.properties
+++ b/backend/src/main/resources/app-config.properties
@@ -1,3 +1,4 @@
+cors.allowed-origins=*
 deactivated.tokens=
 download.buffer-size=8192
 jwt.secret-key=flc
@@ -6,6 +7,3 @@ log.max-size=100
 preview.max-file-size=10485760
 preview.compress-image=true
 private.directories=/private,/images
-request.timeout=6000
-
-
