--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "clipboard": "^2.0.11",
+    "crypto-js": "^4.1.1",
     "file-saver": "^2.0.5",
     "heic2any": "^0.0.4",
     "highlight.js": "^11.7.0",
