--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "v-contextmenu": "^3.0.0",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
+    "vue-lazyload": "^3.0.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
