--- a/backend/src/main/resources/app-config.properties
+++ b/backend/src/main/resources/app-config.properties
@@ -1,9 +1,9 @@
-cors.allowed-origins=*
-deactivated.tokens=
-download.buffer-size=8192
+#cors.allowed-origins=*
+
 jwt.secret-key=flc
 jwt.expiration-time=15552000
-log.max-size=200
-preview.max-file-size=10485760
-preview.compress-image=true
-private.directories=/private,/images
+
+file.download.buffer-size=8192
+file.preview.max-size=10485760
+file.preview.compress-image=true
+file.private-dir=/private,/images
