--- a/backend/src/main/resources/app-config.properties
+++ b/backend/src/main/resources/app-config.properties
@@ -1,9 +1,7 @@
-#cors.allowed-origins=*
-
 jwt.secret-key=flc
 jwt.expiration-time=15552000
 
-file.download.buffer-size=8192
-file.preview.max-size=10485760
-file.preview.compress-image=true
-file.private-dir=/private,/images
+download.buffer.size=1048576
+preview.max.size=10485760
+preview.image.compress=true
+private.directories=/private,/images
